Updated #FontAwesome for the icons visual style

--- a/ProjectX_Proto1/ProjectX_Proto1.csproj
+++ b/ProjectX_Proto1/ProjectX_Proto1.csproj
@@ -111,6 +111,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Resource Include="Resources\fontawesome-webfont.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
